3821B1PE1/9_gelu_ocl/chuvashov_andrey/log.txt
In file included from /home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:4:
/usr/include/CL/opencl.hpp:437:112: note: ‘#pragma message: opencl.hpp: CL_HPP_TARGET_OPENCL_VERSION is not defined. It will default to 300 (OpenCL 3.0)’
  437 | # pragma message("opencl.hpp: CL_HPP_TARGET_OPENCL_VERSION is not defined. It will default to 300 (OpenCL 3.0)")
      |                                                                                                                ^
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:58:12: error: ‘output’ was not declared in this scope
   58 |     return output;
      |            ^~~~~~
